<resources>
    <string name="app_name">Project2</string>
    <string name="meow_meals">MeowMeals</string>
    <string name="login_button">Login</string>
    <string name="login_text">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Create">Create an account? Click below</string>
    <string name="Account">Have an account? Click Login</string>
    <string name="register_text">Register</string>
    <string name="name">Full Name</string>
    <string name="cart_button">TODO</string>
    <string name="products">Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_image">product_image</string>
    <string name="cart">Cart</string>
    <string name="product_img">TODO</string>
    <string name="minus">-</string>
    <string name="qty_input">1</string>
    <string name="plus">+</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="increase_qty">TODO</string>
    <string name="decrease_qty">TODO</string>
    <string name="go_to_checkout">Checkout</string>
    <string name="decrease_quantity">TODO</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="checkout">Checkout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="pin_code">Pin code</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_options">Payment Options</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="payment_portal">Payment Portal</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MMYY</string>
    <string name="https_meowmeals_com_payments">Click here to proceed to the Payment Portal</string>
    <string name="submit_order">Submit Order</string>
    <string name="apt_building_no">Apt/Building No.</string>
    <string name="street_address">Street Address</string>
    <string name="city_province">City Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="full_name">Full Name</string>
    <string name="thank_you">Thank you!</string>
    <string name="go_to_products">Continue shopping</string>
    <string name="thank_you_message">We have received your order and it will be shipped shortly. You\'ll receive the Shipment Tracking Number to your registered Email and Phone Number.</string>
    <string name="Congrats">Congratulations! you\'ve successfully placed your order.</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00">$10.00</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="subtotal">Subtotal: </string>
    <string name="gst_hst">GST/HST: </string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="_0_00">$0.00</string>
    <string name="home_img">home_img</string>
    <string name="_11">1</string>
</resources>