<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="20sp"
            android:background="@color/black">

            <TextView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:text="@string/meow_meals"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/checkout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/checkout"
            android:textSize="30sp"
            android:fontFamily="@font/aclonica"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_gravity="center"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:autofillHints="name"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apt_building_no"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apt_building_No"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:autofillHints="postalAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_address"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/street_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:autofillHints="postalAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_province"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:autofillHints="postalAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pin_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalCode"
                        android:inputType="textPostalAddress"
                        android:maxLength="6"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:boxBackgroundColor="@color/form_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:inputType="phone"
                        android:maxLength="10"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/payment_options"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:layout_marginTop="8dp"
                    />

                <RadioGroup
                    android:id="@+id/payment_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                    <RadioButton
                        android:id="@+id/credit_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_card"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="@font/amethysta"
                        android:textColor="@color/text"
                        android:background="@color/light_gray"
                        android:paddingHorizontal="16dp" />

                    <RadioButton
                        android:id="@+id/debit_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/debit_card"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:background="@color/light_gray"
                        android:paddingHorizontal="16dp"/>
                </RadioGroup>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/credit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/card_holder_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:background="@android:drawable/edit_text"/>

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardNumber"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16"
                android:padding="8dp"
                android:background="@android:drawable/edit_text"/>

            <EditText
                android:id="@+id/card_expiry"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardExpirationDate"
                android:hint="@string/mm_yy"
                android:inputType="number"
                android:padding="8dp"
                android:maxLength="4"
                android:background="@android:drawable/edit_text"/>

            <EditText
                android:id="@+id/card_cvv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardSecurityCode"
                android:hint="@string/cvv"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:padding="8dp"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/debit_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/debit_card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/card_holder_name"
                android:inputType="textPersonName"
                android:layout_margin="2dp"
                android:padding="8dp"
                android:background="@android:drawable/edit_text"/>

            <EditText
                android:id="@+id/debit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardNumber"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16"
                android:padding="8dp"
                android:background="@android:drawable/edit_text"/>

            <EditText
                android:id="@+id/debit_pin_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:autofillHints="postalCode"
                android:hint="@string/postal_code"
                android:padding="8dp"
                android:maxLength="6"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/submit_order"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>