<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/product_img" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amethysta"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16sp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:layout_marginBottom="6dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingBottom="8dp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/increase_quantity"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:contentDescription="@string/increase_qty"
                android:src="@drawable/add"
                android:backgroundTint="@color/cyan"/>

            <EditText
                android:id="@+id/quantity_input"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:autofillHints="number"
                android:inputType="number"
                android:gravity="center"
                android:hint="@string/qty_input"
                android:textSize="20sp"
                android:layout_marginHorizontal="8dp"
                android:background="@android:drawable/edit_text"/>

            <ImageView
                android:id="@+id/decrease_quantity"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:contentDescription="@string/decrease_qty"
                android:src="@drawable/remove"
                android:backgroundTint="@color/cyan"/>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/add_to_cart_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:textStyle="bold"
                android:text="@string/add_to_cart"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_marginEnd="8dp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/go_to_cart_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_weight="1"
                android:text="@string/go_to_cart"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>